# shipaw

./: .buildinfo  .env  .gitignore  MANIFEST.in  README.md  __init__.py  client.html  genindex.html  gui.doc  index.html  index.rst  local_dep.bat  local_pyproject.toml  notes.txt  objects.inv  prek.toml  pyproject.toml  sd.py  search.html  searchindex.js
.doctrees/: client.doctree  environment.pickle  index.doctree
.github/workflows/: gh-pages.yml
.run/: SHIPAW FAPI APP.run.xml  SHIPAW FAPI.run.xml  SHIPAW TESTS.run.xml  Shipaw Live.run.xml  Shipaw Sandbox.run.xml  local_providers.bat
bench/: meta2.py  providers.py
bench/royal_mail/: __init__.py  royal_mail_funcs.py
docs/source/: client.rst  conf.py  index.rst
docs/source/resources/: expresslink_pydantic_generated.py  expresslink_types.wsdl
resources/: ShipServiceDefinitions-OpenApi31Yaml.yaml  old_req.py  order_req.py  order_resp.py  shared.py  success_avail_services.py
resources/leg/: avail_request.py  v2.py  v3.py
src/shipaw/: __init__.py  config.py  config_loguru.py  data_model_gen  expresslink_api.wsdl  expresslink_client.py  logging.py  logging_sql.py  one_shots.py  pf_config.py  ship_types.py  shipr_types.py  sql_helpers.py
src/shipaw/agnostic/: address.py  agnost.py  agnost_funcs.py  base.py  config.py  conversation.py  label_file.py  logging.py  meta.py  meta2.py  providers.py  requests.py  responses.py  services.py  ship_log.py  ship_types.py  shipment.py
src/shipaw/apc/: address.py  config.py  parcelspecs.py  play.py  provider.py  requests.py  services.py  shared.py  shipment.py
src/shipaw/bench/: booking_states.py
src/shipaw/fapi/: alerts.py  am_routes.py  app.py  app_custom.py  backend.py  callbacks.py  emailer.py  form_data.py  html_routes.py  json_routes.py  log_stream.py  requests.py  responses.py  routes_api.py  routes_html.py  ui_funcs.py
src/shipaw/models/: __init__.py  address.py  address_contact.py  address_contact1.py  all_shipment_types.py  base_item.py  booking_states.py  consts_enums.py  conversation.py  lab2.py  label_file.py  logging.py  pf_combadge.py  pf_ext.py  pf_label.py  pf_lists.py  pf_models.py  pf_msg.py  pf_services.py  pf_shared.py  pf_shipment.py  pf_shipment_blank.py  pf_shipment_configured.py  pf_top.py  provider.py  requests.py  responses.py  services.py  services2.py  ship_types.py  shipable.py  shipment.py  shipment1.py  shipment_booking.py  shipment_protocol.py  str_enum_funcs.py
src/shipaw/msgs/: __init__.py  model_forms.py  pf_msg.py  pf_msg_protocols.py
src/shipaw/nicegui_ui/: __init__.py  app.py  logic.py  theme.py
src/shipaw/parcelforce/: address.py  client.py  combadge.py  config.py  lists.py  models.py  msg.py  notifications.py  pf_combadge.py  pf_config.py  pf_msg.py  pf_shared.py  pf_shipment.py  pf_top.py  provider.py  provider2.py  request_response.py  services.py  shared.py  shipment.py  shipment_bk.py  top.py
src/shipaw/providers/: __init__.py  apc_provider.py  parcelforce_provider.py  provider_abc.py  providers.py  registry.py
src/shipaw/providers_wip/: royal_mail_provider.py
src/shipaw/royal_mail/: click-and-drop-api-v1.yaml  play.py
src/shipaw/ship_ui/: __init__.py  base_page.py  dynamic.py  forms.py  forms2.py  forms_no_initial.py  managers1.py  shipment_states.py  states.py
src/shipr/: __init__.py  bk.py  bk2.py  data_model_gen.sh  el_combadge.py  expresslink.py  expresslink2.py  expresslink_client.py  expresslink_specs.py  fuzzy.py  main.py  pf_config.py  shipr_types.py  types.py
tests/: conftest.py  helpers.py  setup.py  test_address_search.py  test_agnost.py  test_apc.py  test_apc1.py  test_apc_manual.py  test_avail.py  test_c_1.py  test_combad.py  test_combad2.py  test_combadge.py  test_config.py  test_email.py  test_express.py  test_express2.py  test_label_name.py  test_log_db.py  test_logger.py  test_meta.py  test_parcelforce.py  test_pf.py  test_providers.py  test_royal_mail.py  test_smth.py  test_tyes.py  test_zeep.py
tests/parcelforce/: conftest.py  test_backend.py
tests/test_rm/: conftest.py
tests/ui/: conftest.py  test_app.py
tests/with_rm/: conftest.py
ui/static/: ship.css
ui/templates/: shipping_form.html
(+202 files in other folders)
