[project]
name = "shipaw"
version = "0.1.17"
description = "Shipping client"
authors = [
    { name = "pawrequest", email = "shipaw+pawrequest@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    'pawdantic @ git+https://github.com/pawrequest/pawdantic', # special pydantic types eg truncated strings
    'combadge[zeep]', # xml client
    'thefuzz', # fuzzy search to match addresses
    'loguru', # logging
    'phonenumbers',
    'pydantic-settings',
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    'pytest',
    'autodoc_pydantic',
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-readme",
    "sphinx_rtd_dark_mode",
]
#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
extend-select = ["Q", "RUF100", "UP"]
flake8-quotes = {inline-quotes = "single", multiline-quotes = "double"}
format.quote-style="single"
