[project]
license = "MIT"
name = "shipaw"
version = "0.3.0"
description = "Shipping client"
authors = [
    { name = "pawrequest", email = "shipaw+pawrequest@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">= 3.13"
dependencies = [
    #    'phonenumbers',
    "httpx>=0.28.1",
    "pygments>=2.19.2",
    "parcelforce-expresslink",
    "pydantic[email]>=2.11.9",
    "pytest>=8.4.2",
    "fastapi[standard]>=0.117.1",
    "jinja2>=3.1.6",
    "hatchling>=1.27.0",
    "combadge[zeep]>=4.8.2",
    "loguru>=0.7.3",
    "thefuzz>=0.22.1",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings>=2.11.0",
#    custom:
    #    "royal-mail-click-and-drop",
    "apc-hypaship",
    'pawdantic', # special pydantic types eg truncated strings
    "pawdf",
]

[project.optional-dependencies]
dev = [
    'pytest',
    'autodoc_pydantic',
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-readme",
    "sphinx_rtd_dark_mode",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
extend-select = ["Q", "RUF100", "UP"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
format.quote-style = "single"

[tool.uv.sources]
pawdantic = { git = 'https://github.com/pawrequest/pawdantic' }
pawdf = { git = 'https://github.com/pawrequest/pawdf' }

royal-mail-click-and-drop = { git = 'https://github.com/pawrequest/royal-mail-click-and-drop' }
parcelforce-expresslink = { git = 'https://github.com/pawrequest/parcelforce_expresslink' }
apc-hypaship = { git = 'https://github.com/pawrequest/apc-hypaship' }

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-includes = ["src/shipaw/ui/**"]
